updates to vectors lab

--- a/vectors.ipynb
+++ b/vectors.ipynb
@@ -379,11 +379,85 @@
    "source": [
     "### Challenge!\n",
     "\n",
-    "Download station data in CSV format from: https://www.wpc.ncep.noaa.gov/sfc/sfcobs/sfcobs.shtml#sfctable .\n",
+    "Find sounding data in list text format from: https://weather.uwyo.edu/upperair/sounding.html for any single date and time that you wish. Copy and paste this text into excell, click on the data table and sort text to columns. You may have to edit the title tabs. Save as a .csv file and make sure that it is saved or uploaded into the same directory as this notebook.\n",
     "\n",
     "Load in the data using xarray or pandas.\n",
     "\n",
-    "Then use the wind data to calculate the u and v wind components."
+    "Then use the wind data to calculate the u and v wind components from the wind magnitude (variable: SKNT in knots) and direction (variable: DRCT in degrees)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cd34bf5-7f10-4ffc-b9de-cfc52c57e168",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import the pandas package\n",
+    "\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c59b7d0e-a00c-46b1-8fa4-a0b2b183ffc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read in the file\n",
+    "# be sure to replace the file path with your file path and name\n",
+    "\n",
+    "sounding = pd.read_csv('/home/croufa/dynamicslabs/8.28.00Zsounding.csv/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fcb8e546-80e5-43a1-8772-1e4465723d85",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# let's calculate the wind components\n",
+    "\n",
+    "# take the magnitude of the wind vector and multiply by the cosine of the wind direction angle\n",
+    "# divide by 2 to convert from knots to m/s\n",
+    "\n",
+    "u = sounding['SKNT'] * np.cosine('DRCT') / 2.\n",
+    "\n",
+    "u"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "566d9395-8cf9-48a8-a03c-97a0893695f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# take the magnitude of the wind vector and multiply by the sine of the wind direction angle\n",
+    "# divide by 2 to convert from knots to m/s\n",
+    "\n",
+    "v = sounding['SKNT']* np.sine('DRCT') / 2.\n",
+    "\n",
+    "v"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "48763d75-6f8b-4122-8a97-dd1a3709c395",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# alternative method using metpy\n",
+    "import metpy as mp\n",
+    "\n",
+    "# assign u and v to new columns in the sounding csv\n",
+    "# metpy wind_components function takes arguments speed, wind direction\n",
+    "sounding['U'], sounding['V'] = mp.wind_components(sounding[SKNT], sounding[DRCT])\n",
+    "\n",
+    "sounding # should now show columns with 'U' and 'V' for the wind"
    ]
   }
  ],
