update vectors lab with real data example

--- a/vectors.ipynb
+++ b/vectors.ipynb
@@ -408,7 +408,7 @@
     "# read in the file\n",
     "# be sure to replace the file path with your file path and name\n",
     "\n",
-    "sounding = pd.read_csv('/home/croufa/dynamicslabs/8.28.00Zsounding.csv/')"
+    "df = pd.read_csv('/home/croufa/dynamicslabs/8.28.00Zsounding.csv/')"
    ]
   },
   {
@@ -423,7 +423,7 @@
     "# take the magnitude of the wind vector and multiply by the cosine of the wind direction angle\n",
     "# divide by 2 to convert from knots to m/s\n",
     "\n",
-    "u = sounding['SKNT'] * np.cosine('DRCT') / 2.\n",
+    "u = df['SKNT'] * np.cosine('DRCT') / 2.\n",
     "\n",
     "u"
    ]
@@ -438,7 +438,7 @@
     "# take the magnitude of the wind vector and multiply by the sine of the wind direction angle\n",
     "# divide by 2 to convert from knots to m/s\n",
     "\n",
-    "v = sounding['SKNT']* np.sine('DRCT') / 2.\n",
+    "v = df['SKNT']* np.sine('DRCT') / 2.\n",
     "\n",
     "v"
    ]
@@ -455,9 +455,9 @@
     "\n",
     "# assign u and v to new columns in the sounding csv\n",
     "# metpy wind_components function takes arguments speed, wind direction\n",
-    "sounding['U'], sounding['V'] = mp.wind_components(sounding[SKNT], sounding[DRCT])\n",
+    "df['U'], df['V'] = mp.wind_components(df[SKNT], df[DRCT])\n",
     "\n",
-    "sounding # should now show columns with 'U' and 'V' for the wind"
+    "df # should now show columns with 'U' and 'V' for the wind"
    ]
   }
  ],
